task/PW-120 - Fixed issue that shifted footer nav and cv button on Experience screen (scrollbar)

--- a/Personal Website/Website/styles/experience.css
+++ b/Personal Website/Website/styles/experience.css
@@ -1,9 +1,17 @@
 /* General */
-#page
-{
+html {
+	width: 100vw;
+	overflow-x: hidden;
+}
+body{
+	width: 100vw;
+	overflow-x: hidden;
+}
+#page {
 	position: absolute;
-	width:100%;
-	height:100%;
+	width: 100vw;
+	height: 100%;
+	overflow-x: hidden;
 }
 
 /* Loading Spinner */
